# hyphenation

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  HLint.hs  LICENSE  README.markdown  Text-Hyphenation-Exception.html  Text-Hyphenation-Hyphenator.html  Text-Hyphenation-Language.html  Text-Hyphenation-Pattern.html  Text-Hyphenation.html  cabal.haskell-ci  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  en.hyp  fr.hyp  hyphenation.cabal  hyphenation.haddock  index-frames.html  (+7 more)
.github/workflows/: haskell-ci.yml
Text/: Hyphenation.hs
Text/Hyphenation/: English.hs  Exception.hs  Hyphenator.hs  Language.hs  Pattern.hs
data/: en.hyp  fr.hyp
examples/: icelandic.txt
src/: Paths_hyphenation.html  Text-Hyphenation-Exception.html  Text-Hyphenation-Hyphenator.html  Text-Hyphenation-Language.html  Text-Hyphenation-Pattern.html  Text-Hyphenation.html
src/Text/: Hyphenation.hs
src/Text/Hyphenation/: ByteStringLazyCompat.hs  Exception.hs  Hyphenator.hs  Language.hs  Pattern.hs
tests/: doctests.hs
