name:          hyphenation
category:      Text
version:       0.8.2
license:       BSD2
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/hyphenation
bug-reports:   http://github.com/ekmett/hyphenation/issues
copyright:     (C) 2012-2019 Edward A. Kmett
synopsis:      Configurable Knuth-Liang hyphenation
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.4
             , GHC == 9.8.1
description:
  Configurable Knuth-Liang hyphenation
  .
  Uses the UTF8 encoded hyphenation patterns provided by
  hyph-utf8 from
  <http://www.ctan.org/tex-archive/language/hyph-utf8>
  .
  Usage:
  .
  >>> hyphenate english_US "supercalifragilisticexpialadocious"
  ["su","per","cal","ifrag","ilis","tic","ex","pi","al","ado","cious"]
  .
  >>> hyphenate english_US "hyphenation"
  ["hy","phen","ation"]
  .
  >>> hyphenate icelandic "va\240lahei\240avegavinnuverkf\230rageymslusk\250r"
  ["va\240la","hei\240a","vega","vinnu","verk","f\230ra","geymslu","sk\250r"]
build-type:    Simple

data-dir:      data
data-files:    *.hyp.txt.gz, *.pat.txt.gz, *.lic.txt.gz, *.chr.txt.gz
extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/hyphenation.git

Flag Embed
  Description: Embed data in library binary
               (Warning: This increases the executable size by about 1Mb unless
                         unneeded language data files are manually removed from
                         the "data" directory before compiling)
  Default:     True

library
  build-depends:
    base                 >= 4.9      && < 5,
    bytestring           >= 0.10.8.1 && < 0.13,
    containers           >= 0.3.0.0  && < 0.9,
    unordered-containers >= 0.2.1    && < 0.3,
    zlib                 >= 0.5      && < 0.8,
    text

  if flag(embed)
    build-depends: file-embed >= 0.0.7 && < 0.1
    CPP-Options: "-DEMBED"

  exposed-modules:
   Text.Hyphenation
   Text.Hyphenation.Hyphenator
   Text.Hyphenation.Language
   Text.Hyphenation.Exception
   Text.Hyphenation.Pattern

  other-modules:
   Paths_hyphenation

  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010
